--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   http: ^1.2.2
+  file_picker: ^8.1.6
   cupertino_icons:
   flutter_screenutil: ^5.8.4 
   shared_preferences: ^2.2.0 
