--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: '>=3.0.1 <4.0.0'
 
 dependencies:
+  crypto: ^3.0.6
   qr_flutter: ^4.1.0
   font_awesome_flutter: ^10.5.0
   http: ^1.2.2
